GNOME Bugzilla – Bug 666714
Personal Information dialog for my XMPP account has a number of glitches
Last modified: 2012-01-30 15:41:16 UTC
Feast your eyes upon <http://willthompson.co.uk/misc/xmpp-personal-info.png>. 1. There's a huge gap between the Account/Identifier/Alias fields and my avatar. This is triggered by a very long status message and/or the Contact Details section being visible (on Salut, for instance, the Contact Details section doesn't appear but the huge gap does when I have a huge message). 2. The avatar button isn't vertically aligned with anything else. It starts a few pixels below the top of the Account selector, and finishes about halfway up the Alias field. 3. What on earth does “Phone number (home, work, voice, mobile, preferred)” mean? My mobile number isn't all of those things. {home, work} are mutually exclusive; voice can probably be assumed (unless we support fax/text phone field flags?); mobile is a boolean; preferred should apply to exactly one number, but since we only let the user enter one number, of course that's the preferred number. 4. Ditto “Email address (home, work, preferred)”—my personal email address may be the first and third of those, but it's not the second.
I addressed the first 2 issues with this bunch of patch. They probably be squashed tbh but manually editing ui file is hard enough to do it step by step. :)
Created attachment 205697 [details] [review] contact-widget: stop storing hbox_contact It's not used.
Created attachment 205698 [details] [review] empathy-contact-widget: replace hbox_contact by a GtkGrid
Created attachment 205699 [details] [review] contact-widget: move hbox_presence to grid_contact There is no point keeping this even more complicated that it already is.
Created attachment 205700 [details] [review] move vbox_avatar to grid_contact That way the avatar is no longer miss aligned with the other fields.
Created attachment 205701 [details] [review] contact-widget: merge grid_contact and main_grid_contact No point keeping the extra widgets now.
Attachment 205697 [details] pushed as 493a623 - contact-widget: stop storing hbox_contact Attachment 205698 [details] pushed as 579a792 - empathy-contact-widget: replace hbox_contact by a GtkGrid Attachment 205699 [details] pushed as 34bdfa8 - contact-widget: move hbox_presence to grid_contact Attachment 205700 [details] pushed as 98f5b05 - move vbox_avatar to grid_contact Attachment 205701 [details] pushed as 140d5bc - contact-widget: merge grid_contact and main_grid_contact
Closing this bug as fixed. 3) and 4) are basically bug #646670 This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
(In reply to comment #8) > Closing this bug as fixed. 3) and 4) are basically bug #646670 > > This problem has been fixed in the development version. The fix will be > available in the next major software release. Thank you for your bug report. Humm maybe not, actually Empathy just displays what Gabble gives us: https://bugs.freedesktop.org/show_bug.cgi?id=45403