contact-widget: stop storing hbox_contact

It's not used.

https://bugzilla.gnome.org/show_bug.cgi?id=666714